bfd/elf32-i386.c
@@ -2072,11 +2072,12 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
   /* STT_GNU_IFUNC symbol must go through PLT. */
   if (h->type == STT_GNU_IFUNC)
     {
-      /* Check local STT_GNU_IFUNC calls.  */
+      /* All local STT_GNU_IFUNC references must be treate as local
+	 calls via local PLT.  */
       if (h->ref_regular
 	  && SYMBOL_CALLS_LOCAL (info, h))
 	{
-	  bfd_size_type pc_count = 0;
+	  bfd_size_type pc_count = 0, count = 0;
 	  struct elf_dyn_relocs **pp;
 
 	  eh = (struct elf_i386_link_hash_entry *) h;
@@ -2085,13 +2086,14 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
 	      pc_count += p->pc_count;
 	      p->count -= p->pc_count;
 	      p->pc_count = 0;
+	      count += p->count;
 	      if (p->count == 0)
 		*pp = p->next;
 	      else
 		pp = &p->next;
 	    }
 
-	  if (pc_count)
+	  if (pc_count || count)
 	    {
 	      h->needs_plt = 1;
 	      h->plt.refcount += 1;
